<resources>
    <string name="app_name">APPNAME</string>

    <string name="name">Type the Name:</string>
    <string name="nameHint">Name</string>
    <string name="relation">Type the Relationship:</string>
    <string name="relationHint">Relationship</string>
    <string name="set">Okay</string>
    <string name="todo">TODO</string>

    <string name="camerabutton">open camera</string>
    <string name="done">Okay</string>

    <string name="cancel">Cancel</string>

    <string name="home1">Add a person</string>
    <string name="home2">View People</string>
    <string name="welcome">Welcome</string>
    <string name="string">✧</string>
    <string name="delete">Delete</string>
    <string name="string_delete" />
    <string name="delete1">delete</string>
    <string name="eat_breakfast">Eat Breakfast</string>
    <string name="eat_dinner">Eat Dinner</string>
    <string name="eat_lunch">Eat Lunch</string>
    <string name="take_medication">Take Medication</string>
    <string name="take_a_shower">Take a shower</string>
    <string name="brush_your_teeth">Brush your teeth</string>
    <string name="tasks_page">Tasks Page</string>
    <string name="memory_aid">Memory Aid</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="task_string_delete1">Task @string/delete1</string>
    <string name="done2">Done</string>
    <string name="view_people">VIEW PEOPLE</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="add_person">ADD PERSON</string>
    <string name="add_task">ADD TASK</string>
    <string name="textview4">TextView</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="delete_a_task">DELETE A TASK</string>
    <string name="view_tasks">VIEW TASKS</string>


</resources>