<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/people"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/personImg"
        android:layout_width="273dp"
        android:layout_height="273dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="16dp"
        android:rotation="90"
        android:contentDescription="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003"
        tools:srcCompat="@tools:sample/avatars[5]" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="180dp"
        android:text="@string/nameHint"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/relationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="169dp"
        android:text="@string/relationHint"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/camerabutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relationText"
        app:layout_constraintVertical_bias="0.84000003"
        app:srcCompat="@android:drawable/ic_menu_camera" />

</android.support.constraint.ConstraintLayout>